[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/sprites/joystick/joystick_2.png" type="Texture" id=1]
[ext_resource path="res://art/sprites/joystick/arrow_black.png" type="Texture" id=2]
[ext_resource path="res://art/sprites/joystick/joystick_pressed.png" type="Texture" id=3]
[ext_resource path="res://art/sprites/joystick/arrow_blue.png" type="Texture" id=4]
[ext_resource path="res://code/joystick_v2.gd" type="Script" id=5]


[node name="joystick" type="Node2D"]
position = Vector2( 90.5928, 505.644 )
script = ExtResource( 5 )

[node name="button_jump" type="TouchScreenButton" parent="."]
position = Vector2( 759.043, -86.4859 )
scale = Vector2( 2, 2 )
normal = ExtResource( 1 )
pressed = ExtResource( 3 )

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2( 121.387, 48.111 )
rotation = -3.15408
normal = ExtResource( 2 )
pressed = ExtResource( 4 )
shape_visible = false

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2( 148.033, -88.0799 )
rotation = -0.028102
normal = ExtResource( 2 )
pressed = ExtResource( 4 )
shape_visible = false
[connection signal="pressed" from="button_jump" to="." method="_on_button_jump_pressed"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="released" from="left" to="." method="_on_left_released"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="released" from="right" to="." method="_on_right_released"]
